<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_24sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.SuccessFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_success"
        android:layout_marginBottom="@dimen/_36sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_success"
        android:contentDescription="@string/success" />

    <TextView
        android:id="@+id/tv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textSize="@dimen/_20ssp"
        android:layout_marginBottom="@dimen/_9sdp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/tv_cong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_cong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9CA3AF"
        android:textSize="@dimen/_13ssp"
        android:layout_marginBottom="@dimen/_72sdp"
        android:text="@string/congratulations_you_have_been_n_successfully_authenticated"
        app:layout_constraintBottom_toTopOf="@id/cont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/cont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:paddingVertical="@dimen/_10sdp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>